WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161153
In some cases, an IPC::Connection won't know when the other end has gone away
https://bugs.webkit.org/show_bug.cgi?id=161153
Summary
In some cases, an IPC::Connection won't know when the other end has gone away
Anders Carlsson
Reported
2016-08-24 11:49:22 PDT
In some cases, an IPC::Connection won't know when the other end has gone away
Attachments
Patch
(1.74 KB, patch)
2016-08-24 11:50 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-08-24 11:50:33 PDT
Created
attachment 286876
[details]
Patch
Anders Carlsson
Comment 2
2016-08-24 11:55:18 PDT
Committed
r204911
: <
http://trac.webkit.org/changeset/204911
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug