In some cases, an IPC::Connection won't know when the other end has gone away https://bugs.webkit.org/show_bug.cgi?id=161153 rdar://problem/27896368

Reviewed by Dan Bernstein.

When being asked to invalidate a connection that isn't yet connected, make sure to release
our send and receive rights so that the other end will get a failure when trying to connect.

* Platform/IPC/mac/ConnectionMac.mm:
(IPC::Connection::platformInvalidate):

Canonical link: https://commits.webkit.org/179297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204911 268f45cc-cd09-0410-ab3c-d52691b4dbfc